fix(console): prevent account center route list overflow (#8718)

--- a/packages/console/src/pages/SignInExperience/PageContent/AccountCenter/IntegratePrebuiltUi/index.module.scss
+++ b/packages/console/src/pages/SignInExperience/PageContent/AccountCenter/IntegratePrebuiltUi/index.module.scss
@@ -24,7 +24,7 @@
 
 .urlGrid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: _.unit(3);
 }
 
@@ -38,6 +38,7 @@
   padding: 0 _.unit(3);
   height: 36px;
   gap: _.unit(2);
+  min-width: 0;
 }
 
 .urlPath {
